control-point: retry get description url on failure

Retry 4 times, doubling the intial timeout of 5s

Modified version of original patch

https://bugzilla.gnome.org/show_bug.cgi?id=694450

Signed-off-by: Jens Georg <mail@jensge.org>